////////////////////////////////////////////////////////////
// This file has the message based interface between cloud
// and viziers.
// All messages that should up on the message bus between them
// should be in this file.
//
// IMPORTANT: Care should be taken in modifying this file or moving messages,
// since it can change the type signature and break the API.
////////////////////////////////////////////////////////////
syntax = "proto3";

package pl.cvmsgspb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "src/shared/k8s/metadatapb/metadata.proto";

option go_package = "pixielabs.ai/pixielabs/src/shared/cvmsgspb/messagespb;cvmsgspb";

// MetadataUpdate carries streaming updates from Vizier to cloud.
message MetadataUpdate {
    pl.shared.k8s.metadatapb.ResourceUpdate update = 1;
}

// MetadataRequest is the message used by cloud to request a specific metadata from Vizier.
message MetadataRequest {
    // The earliest resource version to get. This can be left blank if requesting updates
    // since the beginning of time.
    string from = 1;

    // The last resource version to get. This value is not inclusive and should not be left blank.
    string to = 2;
}

// MetadataResponse happens in response to a MetadataRequest and is used by Vizier to respond to metadata
// requests from cloud.
message MetadataResponse {
    repeated pl.shared.k8s.metadatapb.ResourceUpdate updates = 1;
}

// LogMessage carries log messages from Vizier to the cloud.
message VLogMessage {
    // JSON data generated by fluent-bit.
    bytes data = 1;
}

// V2CMessage is an envelope message for the top-level v2c.* NATS channel on the cloud side.
message V2CMessage {
    // This is the ID of the vizier that we track.
    string vizier_id = 1 [(gogoproto.customname) = "VizierID"];
    // This is the ID of K8s cluster as known to K8s. If this changes, we know
    // that the cluster has been updated.
    string cluster_uid = 2 [(gogoproto.customname) = "VizierID"];
    // This is an opaque monotonically increasing number that updates for each restart of cloud connector.
    int64 session_id = 3;
    google.protobuf.Any msg = 4;
}

// C2VMessage is the envelope message for the top-level c2v.* NATS channel on the cloud side.
message C2VMessage {
    string vizier_id = 1 [(gogoproto.customname) = "VizierID"];
    google.protobuf.Any msg = 2;
}
